--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
     <script src="./js/script.js"></script>
     <script src="./js/tabs.js"></script>
     <script src="./js/send-mail.js"></script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
       (function() {
         emailjs.init("user_OVeE89YjAJinBfy6aNVP0");
       })();
-    </script>
+    </script>-->
   </body>
 </html>
