--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. <br>
-                    Ở đây có bán sức lao động.
+                    Xin chào... <br>
+                    Bán sức lao động. Liên hệ để giao dịch ngay.
                   </p>
                   <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
