--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
                     Xin chào... <br>
-                    Bán sức lao động. Liên hệ để giao dịch ngay.
+                    Bán sức lao động. Thi công website, mobile app, UX/UI, poster,...
+                    Liên hệ để giao dịch ngay.
                   </p>
                   <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
