--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
                     Xin chào... <br>
-                    Bán sức lao động. Thi công website, mobile app, UX/UI, poster,...
+                    Bán sức lao động. Thi công website, mobile app, UX/UI, poster,... <br>
                     Liên hệ để giao dịch ngay.
                   </p>
                   <div class="roller "></div>
