--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
           <div class="col-12 portfolio" >
             <h3 class="text-center font-weight-bold pt-3" id="duan">Dự án</h3>
             <div class="por-name tabs text-center d-flex justify-content-center pb-3" >
-              <div class="tab-child" data-tab="pts" >PHOTOSHOP</div><span>|</span>
-              <div class="tab-child" data-tab="uxui">UXUI</div><span>|</span>
-              <div class="tab-child" data-tab="dev">DEV</div><span>
+              <div id="ptss" class="tab-child color" data-colors="ptss" data-tab="pts"  >PHOTOSHOP</div><span>|</span>
+              <div id="uxuis" class="tab-child" data-colors="uxuis" data-tab="uxui" >UXUI</div><span>|</span>
+              <div id="devs" class="tab-child" data-colors="devs" data-tab="dev" >DEV</div><span>
 
             </div>
             <div class="content">
