--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
               <div id="ptss" class="tab-child color" data-colors="ptss" data-tab="pts"  >PHOTOSHOP</div><span>|</span>
               <div id="uxuis" class="tab-child" data-colors="uxuis" data-tab="uxui" >UXUI</div><span>|</span>
               <div id="devs" class="tab-child" data-colors="devs" data-tab="dev" >DEV</div><span>
-
             </div>
+            <p class="note font-italic text-center">(Vui lòng F5 nếu lỗi hiển thị ảnh)</p>
             <div class="content">
               <div class=" grid active" id="pts">
                 <img class="grid-sizer" src="" alt="">
