--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               <div class="thongtin1" id="gioithieu">
                 <div class="content_tt text-center ">
                   <img src="./Picture/avatar.png" alt="phuc">
-                  <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
+                  <h2 class="text-uppercase">Đoàn Văn Phúc - Bán sức lap động</h2>
                   <p>
-                    Xin chào... <br>
-                    <!--Bán sức lao động. Thi công website, mobile app, UX/UI, poster,...-->
+                    Xin chào. Tôi là một công nhân tốt nghiệp ngành CNTT. <br>
+                    Thi công website, mobile app, UX/UI, poster,...
                      <br>
                    
                   </p>
