--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Doan Van Phuc</title>
+    <title>Phucs27 - Bán sức lao động chân chính.</title>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,11 +45,11 @@
               </nav>
             </div>
             <div class="main">
-              <!--info-->
+              <!--intro-->
               <div class="thongtin1" id="gioithieu">
                 <div class="content_tt text-center ">
                   <img src="./Picture/avatar.png" alt="phuc">
-                  <h2 class="text-uppercase">Đoàn Văn Phúc - Bán sức lap động</h2>
+                  <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
                     Xin chào. Tôi là một công nhân tốt nghiệp ngành CNTT. <br>
                     Thi công website, mobile app, UX/UI, poster,...
