--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. Tôi là một công nhân tốt nghiệp ngành CNTT. <br>
+                    Xin chào. Tôi là một công nhân thi công dạo. <br>
                     Thi công website, mobile app, UX/UI, poster,...
                      <br>
                    
