--- a/index.html
+++ b/index.html
@@ -176,9 +176,11 @@
         </div>
         <!--Teams-->
         <div class="row">
-          <div class="col-12 text-center ">
+          <div class="col-12 text-center">
             <h3 class="  font-weight-bold py-4">Teams</h3> 
-            <p>...</p>
+            <div class="loading justify-content-center ">
+
+            </div>
           </div>
           
         </div>
