--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. Tôi là một công nhân thi công dạo. <br>
+                    Xin chào. Tôi là một công nhân, nhận thi công . <br>
                     Thi công website, mobile app, UX/UI, poster,...
                      <br>
                    
@@ -115,6 +115,7 @@
               <hr class="border">
             </div>
           </div>
+          <a href="./picture/pts/img2.jpg"></a>
           <!--portfolio-->
           <!--<div class="col-12 portfolio" id="portfolio">
             <h3 class="text-center font-weight-bold pt-3">Sản phẩm</h3>
@@ -171,7 +172,6 @@
                 <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img8.jpg" alt="">  
 
-                <img class="grid-item" src="./Picture/pts/img9.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img9.jpg" alt="">
 
                 
