--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. Tôi là một công nhân, nhận thi công . <br>
-                    Thi công website, mobile app, UX/UI, poster,...
+                    Xin chào. Tôi là một công nhân . <br>
+                    Nhận thi công website, mobile app, UX/UI, poster,...
                      <br>
                    
                   </p>
