--- a/index.html
+++ b/index.html
@@ -164,15 +164,12 @@
               </div>
               <div class=" grid " id="pts">
                 <img class="grid-sizer" src="" alt="">
-                
                 <img class="grid-item" src="./Picture/pts/img2.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img3.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img8.jpg" alt="">  
-
-                <img class="grid-item" src="./Picture/pts/img9.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img-fujimen2.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img-fujimen1.jpg" alt="">
 
                 
               </div>     
