--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. Tôi là một công nhân . <br>
-                    Nhận thi công website, mobile app, UX/UI, poster,...
+                    Hello...  <br>
+                    
                      <br>
                    
                   </p>
@@ -72,9 +72,7 @@
               <span class="">Khoa: Công nghệ thông tin</span><br>
               <span class="text-secondary time">08/2015-08/2020</span>
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
-                suscipit officiis optio quibusdam commodi at voluptates maxime quos.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium eaque dolorum voluptatem consequatur, ab, quisquam cumque asperiores ipsum harum, labore pariatur optio quasi? Porro suscipit veniam optio quaerat soluta. Sit.
+                Loading....
               </p>
               <hr class="border">
             </div>
@@ -82,8 +80,9 @@
               <h4 class="font-weight-bold">Viện công nghệ và đào tạo Devmaster</h4>
               <span class="">Khoá học: Lập trình web với .Net MVC 5</span><br>
               <span class="text-secondary time">03/2020-08/2020</span>
-              <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
-                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <p class="text-black-50">
+                Loading...
+              </p>
               <hr class="border">
             </div>
           </div>
@@ -102,16 +101,14 @@
               <h4 class="font-weight-bold">Công ty TNHH AI-VN</h4>
               <span class="">Vị trí: Fresher</span><br>
               <span class="text-secondary time">11/2019-02/2020</span>
-              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
-                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <p class="text-secondary">Loading...</p>
               <hr class="border">
             </div>
             <div class="content_edu">        
               <h4 class="font-weight-bold">FPT retail</h4>
               <span class="">Vị trí: Nhân viên kỹ thuật, sale</span><br>
               <span class="text-secondary time">10/2020-04/2021</span>
-              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
-                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <p class="text-secondary">Loading...</p>
               <hr class="border">
             </div>
           </div>
@@ -168,6 +165,7 @@
                 <img class="grid-item" src="./Picture/pts/img3.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img-fujimen2.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img-fujimen1.jpg" alt="">
 
